fixed alignment in settings options

--- a/src/assets/sass/imports/_settings.scss
+++ b/src/assets/sass/imports/_settings.scss
@@ -53,7 +53,7 @@
       display: block;
       font-family: Inter;
       width: fit-content;
-      margin-left: auto;
+      margin-left: 70px;
       margin-right: auto;
       font-style: normal;
       font-weight: 600;
